<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <Button
        android:id="@+id/emla_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/emla_button_text"
        android:layout_centerInParent="true"
        app:layout_constraintWidth_percent="0.7"
        android:visibility="gone"/>

    <Button
        android:id="@+id/better_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/better_button_text"
        android:layout_below="@id/emla_button"
        android:layout_marginTop="16dp"
        app:layout_constraintWidth_percent="0.7"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/no_data_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_data_text"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="visible"/>

</RelativeLayout>
